fix issue with fixed menu and too long chapter titles

--- a/src/main/front-end/app/less/document-view.less
+++ b/src/main/front-end/app/less/document-view.less
@@ -33,9 +33,11 @@ body#document-view {
   .document-view-menu {
     margin-bottom: 30px;
     
-    &> div {
+    .dv-menu-fixed-wrap {
       @media (min-width: 768px) { 
         position: fixed;
+        width: inherit;
+        padding-right: 20px;
       }
     }
   }
